<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".VendorLoginPage">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="731dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="390dp"
            android:layout_height="195dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textViewblank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/login_vendor_email"
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:text="@string/loginEmailField" />

        <EditText
            android:id="@+id/vendor_password"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/loginPasswordField" />

        <Button
            android:id="@+id/btn_edit_details"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:autoLink="all"
            android:background="#FF9800"
            android:clickable="true"
            android:linksClickable="true"
            android:text="Login"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_Register"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="40dp"
            android:autoLink="all"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/registerButtonText"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#000"
            android:textSize="20dp" />

    </LinearLayout>

</FrameLayout>